# hiker-charts

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  SPEC.md  clippy.toml
backend-plotters/: Cargo.toml
backend-plotters/src/: lib.rs  tests.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: backend.rs  block.rs  data.rs  deps.rs  diag.rs  display.rs  dsl.rs  host.rs  identity.rs  lib.rs  registry.rs  resolve.rs  theme.rs  typing.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/: bars.chart.yaml  browsers.chart.yaml  browsers.csv  bubble.chart.yaml  donut.chart.yaml  histogram.chart.yaml  inline.chart  iris.chart.yaml  iris.csv  log-scale.chart.yaml  population.chart.yaml  population.csv  sales.chart.yaml  sales.csv  scores.chart.yaml  scores.csv  stacked-bars.chart.yaml  step-line.chart.yaml  traffic.chart.yaml  traffic.csv  weather.chart.yaml  weather.csv
gui/: Cargo.toml
gui/src/: camera.rs  data_view.rs  lib.rs  model.rs  panel.rs  preview.rs  raster.rs
scripts/: _rust_roots.py  check-emojis.py  check-lengths.py  check-splits.py  check.sh
