[package]
name = "hiker-charts-demo"
edition.workspace = true
version.workspace = true
description = "Windowed eframe demo of the hiker-charts comfy builder. Mirrors Hiker's eframe 0.32 + forked-winit setup so Wayland pinch/magnify zoom works in the chart preview."

[dependencies]
hiker-charts-core.workspace = true
hiker-charts-gui.workspace = true
egui.workspace = true
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
